--- a/tutorial/tutorial.ipynb
+++ b/tutorial/tutorial.ipynb
@@ -12,12 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "ea957f89",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.dhg.generator import dhg_generator\n",
+    "from dhg import dhg_generator\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
    ]
