Align notation with paper, and add details to README.md

--- a/tutorial/tutorial.ipynb
+++ b/tutorial/tutorial.ipynb
@@ -27,7 +27,7 @@
    "id": "5ca244cb",
    "metadata": {},
    "source": [
-    "The cell below generates a DHG with $n=1000$ nodes, average degree $\\bar{k}=10$, exponent $\\gamma=2.85$ of the degree distribution and inverse temperature $\\beta=2.5$."
+    "The cell below generates a DHG with $n=1000$ nodes, average degree $\\bar{k}=10$, exponent $\\gamma=2.85$ of the degree distribution and inverse temperature $\\beta=2.5$. The `dhg_generator` returns $A$ the adjacency matrix (in `scipy.sparse.coo_matrix` format) and a tuple of the hidden variables encoding expected degree $\\kappa_i$, angular coordinate $x_i\\in[0,n)$, as well as the chemical potential $\\mu$. These values can be used to compute further properties of the graph, e.g., its energy."
    ]
   },
   {
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A, (k,x,c) = dhg_generator(\n",
+    "A, (kappa, x, mu) = dhg_generator(\n",
     "    n=1000,      # number of nodes\n",
     "    kbar=10,     # average degree\n",
     "    gamma=2.85,  # power law exponent of the degree distribution\n",
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A, (k, x, c) = dhg_generator(\n",
+    "A, (kappa, x, mu) = dhg_generator(\n",
     "    n=1000,      # number of nodes\n",
     "    kbar=10,     # average degree\n",
     "    gamma=2.85,  # power law exponent of the degree distribution\n",
@@ -87,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A, (k, x, c) = dhg_generator(\n",
+    "A, (kappa, x, mu) = dhg_generator(\n",
     "    n=1000,                 # number of nodes\n",
     "    kbar=10,                # average degree\n",
     "    gamma=2.85,             # power law exponent of the degree distribution                 \n",
