Update type hints

--- a/tutorial/tutorial.ipynb
+++ b/tutorial/tutorial.ipynb
@@ -19,6 +19,7 @@
    "source": [
     "from dhg import dhg_generator\n",
     "import numpy as np\n",
+    "import scipy.sparse as sparse\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -106,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "5971c30b",
    "metadata": {},
    "outputs": [
@@ -137,7 +138,7 @@
     "nreps = 500   # number of random realizations\n",
     "seed = 1729   # random seed\n",
     "\n",
-    "def clustering(A: np.ndarray) -> float:\n",
+    "def clustering(A: sparse.spmatrix) -> float:\n",
     "    \"\"\"Compute the clustering coefficient of a graph with adjacency matrix A.\"\"\"\n",
     "\n",
     "    k = np.asarray(A.sum(axis=1)).flatten()\n",
